--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -2,6 +2,5 @@ cmake_minimum_required(VERSION 3.0)
 project(hello C)
 
 set(CMAKE_C_STANDARD 11)
-SET(LIBHELLO_SRC hello.c)
 
-ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
+ADD_SUBDIRECTORY(lib)
