支持同时生成静态库.a和动态库.dll，名字一样都是libhello

--- a/lib/CmakeLists.txt
+++ b/lib/CmakeLists.txt
@@ -1,4 +1,9 @@
 SET(LIBHELLO_SRC hello.c)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/library)
 
+ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
 ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
+
+SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
+SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
