--- a/lib/CmakeLists.txt
+++ b/lib/CmakeLists.txt
@@ -7,3 +7,9 @@ ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
 SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
 SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
 SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+
+INSTALL(TARGETS hello hello_static
+LIBRARY DESTINATION lib
+ARCHIVE DESTINATION lib
+)
+INSTALL(FILES hello.h DESTINATION include/hello)
